@@ -1,5 +1,12 @@
 2008-04-27  Ben Van Mechelen  <me@benvm.be>
 
+	* plugins/sensor_list/Makefile.am:
+	* plugins/sensor_list/sensor_list.py:
+	    remove this plugin for version 0.1.1
+	    
+
+2008-04-27  Ben Van Mechelen  <me@benvm.be>
+
 	* TODO.tasks:
 	* aclocal.m4:
 	* configure.ac:
